<resources>
    <string name="app_name">Paciência Spider</string>
    <string name="user_name">Digite seu nome</string>
    <string name="db_user">NAME_USER</string>
    <string name="db_wins">NUMBER_WINS</string>
    <string name="db_defeats">NUMBER_DEFEATS</string>
    <string-array name="number_naipes">
        <item>1 naipe</item>
        <item>2 naipes</item>
        <item>4 naipes</item>
    </string-array>
    <string name="rules">As pilhas de cartas podem conter no máximo 13 cartas, atenção ao clicar no baralho.</string>
    <string name="tutorial1">Jogo rápido: Dê um clique na carta ou pilha de cartas que deseja mover e o jogo irá buscar automaticamente uma nova pilha para essa carta.</string>
    <string name="tutorial2">Jogo comum: Dê um longo clique na carta ou pilha de cartas que deseja mover, a tela irá alterar a cor e então o usuário deve clicar na pilha que deseja inserir a(s) carta(s) selecionada(s).</string>
    <string name="title_rules">Tutorial e Regras</string>
    <string name="keyword_rules">Regras</string>
    <string name="keyword_tutorial">Tutorial</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="congratulations">PARABÉNS! Você conseguiu uma vitória!</string>
    <string name="continue_playing">Para continuar jogando inicie outra partida</string>
    <string name="number_wins">Número de Vitórias:</string>
    <string name="number_defeats">Número de Derrotas:</string>
    <string name="performance">Aproveitamento:</string>
    <string name="init_game">Iniciar jogo</string>
    <string name="delete_user">Apagar Usuário</string>
    <string name="welcome">Bem vindo(a), </string>
    <string name="no_moves"> Não houve jogadas</string>
    <string name="to_restart">Tem certeza que deseja reiniciar? Essa partida será marcada como derrota!</string>
    <string name="game_restarted">Jogo reiniciado com sucesso!</string>
    <string name="to_quit">Tem certeza que deseja sair?</string>
    <string name="finished_game">Jogo finalizado!</string>
    <string name="max_lenght_stack">Uma das pilhas atingiu 15 cartas</string>
    <string name="conection">Falha! Verifique sua conexão com a internet.</string>
    <string name="cannot_insert_selected_stack">Não é possível inserir na pilha selecionada, tente outra pilha</string>
    <string name="click_into_destiny_stack">Clique na pilha que deseja inserir as cartas selecionadas</string>
    <string name="input_name_to_play">Digite seu nome para começar a jogar.</string>
    <string name="play">Jogar</string>
    <string name="select_size">Selecione a quantidade de naipes</string>
</resources>