<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.paciencia_spider.TutorialScreen"
    android:background="@drawable/bg_app">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rules"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tutorial"
        android:elevation="20dp"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyword_rules"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginVertical="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rules"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyword_tutorial"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginVertical="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial1"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial2"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"
                    android:paddingBottom="5dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>