<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.paciencia_spider.MainActivity"
    android:background="@drawable/bg_app">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="80sp"
            android:layout_marginRight="25sp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/gradient_button_menu"
            android:paddingHorizontal="10dp"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>